@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- $Id: build.xml,v 1.37 2004/06/01 15:40:25 mog Exp $ -->
+<!-- $Id: build.xml,v 1.38 2004/06/01 17:16:41 mog Exp $ -->
 <project name="drftpd" basedir="." default="compile">
 
   <target name="all" depends="compile"/>
@@ -23,9 +23,15 @@
     <mkdir dir="${outputDir}" />
   </target>
 
-  <target name="compile-jfreechart">
+  <target name="compile-jfreechart" depends="compile">
+    <javac srcdir="${sourceDir}" destdir="${outputDir}" classpathref="classpath" debug="true" source="1.4">
+      <include name="org/drftpd/friendly/**"/>
+    </javac>
   </target>
-  <target name="compile-jsx">
+  <target name="compile-jsx" depends="compile">
+    <javac srcdir="${sourceDir}" destdir="${outputDir}" classpathref="classpath" debug="true" source="1.4">
+      <include  name="net/sf/drftpd/master/usermanager/jsx/**"/>
+    </javac>
   </target>
   <target name="compile" depends="init, prepare">
     <javac srcdir="${sourceDir}" destdir="${outputDir}" classpathref="classpath" debug="true" source="1.4">
@@ -139,6 +145,10 @@
       <patternset refid="distfiles"/>
 	  </zipfileset>
     </zip>
+    <echo>
+      Note that you need to update version number in
+      src/net/sf/drftpd/slave/SlaveImpl.java manually.
+    </echo>
   </target>
 
 </project>
